--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@charrue/dida",
   "version": "0.0.1",
-  "description": "",
-  "keywords": [],
-  "homepage": "",
-  "bugs": "",
+  "description": "滴答清单API封装",
+  "keywords": [
+    "charrue",
+    "dida"
+  ],
   "repository": {
     "type": "git",
     "url": "git+"
@@ -37,16 +38,16 @@
   "scripts": {
     "build": "tsup",
     "dev": "tsup src/index.ts --watch",
+    "format": "prettier --write src/**/*.ts",
     "postinstall": "npx husky install",
     "lint": "eslint src/**/*.ts --cache",
     "prepublishOnly": "npm run build",
-    "prettier": "prettier --write src/**/*.ts",
-    "start": "esno src/index.ts",
     "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@charrue/eslint-config-typescript": "latest",
+    "@charrue/prettier": "^0.3.1",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@trivago/prettier-plugin-sort-imports": "^3.4.0",
@@ -54,13 +55,12 @@
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "esno": "^0.16.3",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
     "husky": "^7.0.4",
     "nano-staged": "^0.8.0",
-    "prettier": "^2.7.1",
+    "prettier": "^3.0.3",
     "tsup": "^6.4.0",
     "typescript": "^4.8.3",
     "vitest": "latest"
